ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.groophy.in
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: mysql-service
            port:
              number: 3306
